# fe_dev_test_server

./: Cargo.toml  Dockerfile  README.md
docs/: api.md  assets.md  ux_brief.md
src/: data.rs  images.rs  main.rs  model.rs
terraform/: main.tf  variables.tf
